[package]
name = "assault-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.1.0"
font-kit = "0.10.1"
pathfinder_geometry = "0.5.1"
image = "0.23.14"
rayon = "1.5.1"
ndarray = { version="0.14", features=["rayon", "serde"]}
serde = "1.0.133"
serde_json = "1.0.74"
ndarray-stats = "0.4"
ndarray-image = "0.3"

[[bin]]
name = "assault-cli"
path = "src/main.rs"

[lib]
name = "assault"
path = "src/lib.rs"
